# NeuroCore

./: .gitignore  README.md  app.py  pyproject.toml
docs/: api_reference.md  autograd_internals.md  tutorials.md
examples/: binary_classification.py  cnn_example.py  mnist_mlp.py  xor.py
nc_from_scratch/: README.md  config.py  losses.py  main.py  optimizer.py  utils.py
nn_from_scratch/: activations.py  config.py  dataset.py  layers.py  model.py
nnfs/: __init__.py  benchmark_cli.py  cli.py  dashboard_logic.py
nnfs/core/: __init__.py  backend.py  containers.py  losses.py  module.py  parameter.py  tensor.py  trainer.py
nnfs/layers/: __init__.py  activations.py  conv.py  dense.py  dropout.py  losses.py  modules.py  normalization.py  pooling.py
nnfs/optim/: __init__.py  optimizers.py  scheduler.py  schedulers.py  sgd.py
nnfs/utils/: __init__.py  benchmark.py  dashboard.py  datasets.py  metrics.py  summary.py
tests/: test_autograd_cnn.py  test_integration.py  test_ncfs_library.py  test_nn.py  test_nnfs_library.py
